--- a/styles.css
+++ b/styles.css
@@ -64,11 +64,10 @@ h1 {
   background-color: #e53935;
 }
 
-/* GIF */
 .gif_container img {
-  max-width: 100%;
+  width: 250px;
+  max-width: 75%;
   height: auto;
   border-radius: 15px;
   margin-top: 25px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.15);
 }
